--- a/src/components/common/FilteredPage/Content/Content.module.scss
+++ b/src/components/common/FilteredPage/Content/Content.module.scss
@@ -1,6 +1,22 @@
+.wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.item-wrapper {
+  width: 100vw;
+  max-width: 500px;
+  padding: 1rem;
+}
+
 .product-section {
-  width: 50vw;
+  width: 75vw;
+  max-width: 250px;
   margin: auto;
+  padding: 0.5rem 0;
+  filter: brightness(1);
 
   & p {
     margin: 0.25rem 0;
@@ -10,7 +26,8 @@
 .image-wrapper {
   position: relative;
   width: 100%;
-  height: 50vw;
+  height: 75vw;
+  max-height: 250px;
   border-radius: 15%;
   overflow: hidden;
   box-shadow: 1px 1px 1px 1px;
