--- a/src/components/common/FilteredPage/Content/ImageCarousel.module.scss
+++ b/src/components/common/FilteredPage/Content/ImageCarousel.module.scss
@@ -11,6 +11,11 @@
     position: relative;
     width: 3rem;
     height: 3rem;
+
+    @media screen and (max-width: 325px) {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 
   display: flex;
@@ -34,6 +39,11 @@
     position: relative;
     width: 1.5rem;
     height: 1.5rem;
+
+    @media screen and (max-width: 325px) {
+      width: 1rem;
+      height: 1rem;
+    }
   }
   position: absolute;
   left: 50%;
