--- a/src/components/Home/HomeItems.module.scss
+++ b/src/components/Home/HomeItems.module.scss
@@ -61,6 +61,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-top: 0;
+  margin-bottom: 3rem;
 }
 
 .homepage-item__image-wrapper {
